--- a/about.html
+++ b/about.html
@@ -377,7 +377,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>Ariyan Sohan</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>©Ariyan Sohan</span> | all rights reserved! </div>
 
 </section>
 
