--- a/courses.html
+++ b/courses.html
@@ -292,7 +292,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>Hira Moni</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>©Ariyan Sohan</span> | all rights reserved! </div>
 
 </section>
 
