--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
 </header>
 
-<!-- account form section starts  -->
 
 <div class="account-form">
 
@@ -72,11 +71,6 @@
 
 </div>
 
-<!-- account form section ends -->
-
-<!-- header section ends -->
-
-<!-- home section starts  -->
 
 <section class="home">
 
@@ -311,7 +305,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>Ariyan Sohan</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>© Ariyan Sohan</span> | all rights reserved! </div>
 
 </section>
 
