--- a/contact.html
+++ b/contact.html
@@ -279,7 +279,7 @@
 
    </div>
 
-   <div class="credit"> created by <span>Ariyan Sohan</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>©Ariyan Sohan</span> | all rights reserved! </div>
 
 </section>
 
